--- a/src/pages/home/components/sayItem/sayItem.less
+++ b/src/pages/home/components/sayItem/sayItem.less
@@ -3,48 +3,48 @@
   background: white;
   padding: 20px 10px;
   border-radius: 15px;
+
+  .header {
+    display: flex;
+    margin-bottom: 15px;
+  }
+  
+  .header_left {
+    width: 40px;
+    height: 40px;
+    img {
+      border-radius: 50%;
+    }
+  }
+  
+  .header_right {
+    margin-left: 10px;
+  }
+  
+  .time {
+    color: gainsboro;
+  }
+  
+  .tag {
+    background: orange;
+    color: white;
+    padding: 2px 10px;
+    border-radius: 10px;
+    margin-right: 5px;
+  }
+  
+  .imgs {
+    display: flex;
+    flex-wrap: wrap;
+    width: 270px;
+    margin-top: 10px;
+  }
+  
+  .imgs img{
+    width: 80px;
+    height: 80px;
+    border-radius: 5px;
+    margin: 0px 3px;
+  }
 }
 
-.header {
-  display: flex;
-  margin-bottom: 15px;
-}
-
-.header_left {
-  width: 40px;
-  height: 40px;
-}
-
-.header_left img {
-  border-radius: 50%;
-}
-
-.header_right {
-  margin-left: 10px;
-}
-
-.time {
-  color: gainsboro;
-}
-
-.tag {
-  background: orange;
-  color: white;
-  padding: 2px 5px;
-  border-radius: 5px;
-  margin-right: 5px;
-}
-
-.imgs {
-  display: flex;
-  flex-wrap: wrap;
-  width: 270px;
-  margin-top: 10px;
-}
-
-.imgs img{
-  width: 80px;
-  height: 80px;
-  border-radius: 5px;
-  margin: 0px 3px;
-}
